# Vkapp

./: CMakeLists.txt  LICENSE  README.md
cmake/: GLMModule.cmake  VulkanHppModule.cmake  VulkanMemoryAllocatorHppModule.cmake
src/: aabb.ixx  app.cpp  app.ixx  deviceowner.ixx  functional.cpp  functional.ixx  glmcompat.ixx  io.ixx  io_window.cpp  log.h  resource.ixx  shader.cpp  shader.ixx  utils.ixx  vkapp.ixx
